--- a/index.html
+++ b/index.html
@@ -84,10 +84,16 @@
       <div class="col-xs-12 col-md-6">
         <div class="about-text">
           <p>
+            I am a Full Stack Software developer. This is my story.
+          </p>
+          <p>
             I graduated college with a B.S. in Biomedical Sciences. I originally had the goal of going to medical school because I loved diagnosing problems and finding the solution or cure for them. After getting some first hand experience in the healthcare field, I decided it was not for me because of how clerical the work had become and the poor work life balance. I wanted to take my critical thinking skills and find a path that allowed me the thrive.
           </p>
           <p>
             Then I found programming. As soon as I learned to print "hello world", I immediately fell in love with programming. It was a perfect match for my analytical mind. Figuring out something new and implementing it was the most satisfying feeling I had in a long time. I knew that if I became a developer, I would never find it dull and would be challenged in ways I had never been prior. That just made me more excited.
+          </p>
+          <p>
+            After many hours of hard work and studying, I decided to accelerate my progress by attending a very intense coding bootcamp, App Academy. The work was hard, often 100 hours a week, but I pulled through and succeeded in acquiring the skills to be a full stack developer.
           </p>
           <a href="#portfolio" class="btn btn-default btn-lg page-scroll">My Portfolio</a>
           <a href="Resume.pdf" class="btn btn-default btn-lg page-scroll" target="_blank">My Resume</a> </div>
