add short description to project links

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
             <div class="hover-bg"> <a href="http://www.faceplace.us/#/" title="FacePlace" target="_blank">
               <div class="hover-text">
                 <h4>FacePlace</h4>
+                <p>A social media website inspired by Facebook.</p>
               </div>
               <img src="img/portfolio/faceplace.png" class="img-responsive" alt="FacePlace"> </a> </div>
           </div>
@@ -135,6 +136,7 @@
             <div class="hover-bg"> <a href="http://tommyren.me/ChanceQuest/" title="Chance Quest" target="_blank">
               <div class="hover-text">
                 <h4>Chance Quest</h4>
+                <p>A strategy game influenced by the board game Risk.</p>
               </div>
               <img src="img/portfolio/chancequest.png" class="img-responsive" alt="Chance Quest"> </a> </div>
           </div>
@@ -144,6 +146,7 @@
             <div class="hover-bg"> <a href="http://tommyren.me/StockTracker/#/" title="Stock Tracker" target="_blank">
               <div class="hover-text">
                 <h4>Stock Tracker</h4>
+                <p>An interactive stock price tracker for five tech giants.</p>
               </div>
               <img src="img/portfolio/stocktracker.png" class="img-responsive" alt="Stock Tracker"> </a> </div>
           </div>
@@ -153,6 +156,7 @@
             <div class="hover-bg"> <a href="https://github.com/tommyr418/ActionArchive" title="Action Archive" target="_blank">
               <div class="hover-text">
                 <h4>Action Archive</h4>
+                <p>A lightweight Ruby ORM that mimics Active Record.</p>
               </div>
               <img src="img/portfolio/actionarchive.png" class="img-responsive" alt="Action Archive"> </a> </div>
           </div>
@@ -196,6 +200,9 @@
       </div>
     </div>
   </div>
+  <br/>
+  <br/>
+  <br/>
   <div class="container">
     <div class="section-title text-center center">
       <h2>Skills</h2>
