--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 project">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="http://tommyren.me/ChanceQuest/" title="Chance Quest" target="_blank">
+            <div class="hover-bg"> <a href="http://tommyren.site/ChanceQuest/" title="Chance Quest" target="_blank">
               <div class="hover-text">
                 <h4>Chance Quest</h4>
                 <p>A strategy game influenced by the board game Risk.</p>
@@ -143,7 +143,7 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 project">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="http://tommyren.me/StockTracker/#/" title="Stock Tracker" target="_blank">
+            <div class="hover-bg"> <a href="http://tommyren.site/StockTracker/#/" title="Stock Tracker" target="_blank">
               <div class="hover-text">
                 <h4>Stock Tracker</h4>
                 <p>An interactive stock price tracker for five tech giants.</p>
